# CopilotClaw

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  NOTICE.zh-CN.md  README.md  README.zh-CN.md  app.rc  main.cpp
.github/workflows/: build-windows.yml
